# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/huks/huks.gni")
import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

ohos_shared_library("huks_interfaceImpl_ani") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    integer_overflow = true
    cfi = true
    debug = false
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
  }
  defines = [
    "_HUKS_LOG_ENABLE_",
    "L2_STANDARD",
  ]

  include_dirs = [
    "${huks_base_path}interfaces/inner_api/huks_standard/main/include",
    "${huks_base_path}frameworks/huks_standard/main/common/include",
    "include",
  ]

  sources = [
    "${huks_base_path}interfaces/kits/ani/ani_implement/src/huks_ani_common.cpp",
    "${huks_base_path}interfaces/kits/ani/ani_implement/src/huks_ani_impl.cpp",
  ]

  deps = [
    "${huks_base_path}frameworks/huks_standard/main/common:libhuks_common_standard_static",
    "${huks_base_path}frameworks/huks_standard/main/crypto_engine/openssl:libhuks_openssl_standard_static",
    "${huks_base_path}frameworks/huks_standard/main/os_dependency:libhuks_mem_standard_static",
    "${huks_base_path}interfaces/inner_api/huks_standard/main:libhukssdk",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "runtime_core:ani",
    "runtime_core:libarkruntime",
  ]
  cflags_cc = [
    "-Wall",
    "-Werror",
  ]

  # relative_install_dir = "module/security"
  subsystem_name = "security"
  part_name = "huks"
}

generate_static_abc("security_huks_ani") {
  base_url = "./ets"
  files = [ "./ets/@ohos.security.huks.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/security_huks_ani.abc"
}

ohos_prebuilt_etc("huks_ani_abc_etc") {
  source = "$target_out_dir/security_huks_ani.abc"
  module_install_dir = "framework"
  part_name = "huks"
  subsystem_name = "security"
  deps = [ ":security_huks_ani" ]
}
