# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/security/huks/huks.gni")
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("HksIpcFuzzTest") {
  module_out_path = fuzz_module_out_path
  fuzz_config_file =
      "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksipc_fuzzer"

  include_dirs = [
    ".",
    "..",
    "//base/security/huks/frameworks/huks_standard/main/common/include/",
    "//base/security/huks/services/huks_standard/huks_service/main/os_dependency/idl/ipc",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "//base/security/huks/services/huks_standard/huks_service/main/os_dependency/idl/ipc/hks_service_ipc_serialization.c",
    "hksipc_fuzzer.cpp",
  ]

  deps = [
    "..:hks_fuzz_util",
    "//base/security/huks/frameworks/huks_standard/main:huks_standard_frameworks",
    "//base/security/huks/interfaces/inner_api/huks_standard/main:libhukssdk",
    "//base/security/huks/services/huks_standard/huks_service/main/os_dependency:libhuks_service_os_dependency_standard_static",
    "//base/security/huks/services/huks_standard/huks_service/main/os_dependency/idl:libhuks_service_idl_standard_static",
  ]
  external_deps = [
    "c_utils:utils",
    "ipc:ipc_single",
  ]

  external_deps += [ "hilog:libhilog" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":HksIpcFuzzTest",
  ]
}
###############################################################################
