# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/security/huks/huks.gni")
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("HksStorageFuzzTest") {
  module_out_path = fuzz_module_out_path
  fuzz_config_file =
      "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksstorage_fuzzer"

  include_dirs = [
    ".",
    "..",
    "//base/security/huks/frameworks/huks_standard/main/common/include/",
    "//base/security/huks/services/huks_standard/huks_service/main/hks_storage/src",
    "//base/security/huks/services/huks_standard/huks_service/main/os_dependency/sa",  # hks_osaccount_check.h
    "//base/security/huks/services/huks_standard/huks_service/main/upgrade/lock/include",
  ]

  configs = [ "../../../../frameworks/config/build:l2_standard_common_config" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "hksstorage_fuzzer.cpp" ]

  deps = [
    "..:hks_fuzz_util",
    "//base/security/huks/frameworks/huks_standard/main:huks_standard_frameworks",
    "//base/security/huks/interfaces/inner_api/huks_standard/main:libhukssdk",
    "//base/security/huks/services/huks_standard/huks_service/main/core:libhuks_service_core_standard_static",
    "//base/security/huks/services/huks_standard/huks_service/main/os_dependency:libhuks_service_os_dependency_standard_static",
    "//base/security/huks/utils/file_operator:libhuks_utils_file_operator_static",
  ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "openssl:libcrypto_shared"
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":HksStorageFuzzTest",
  ]
}
###############################################################################
